// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert attachment links inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "[^test.txt]",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert bold formatting inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "*bold*",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert citation inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "??citation??",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert italic formatting inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "_italic_",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert rulers inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "-----",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert strikethrough inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "-strikethrough-",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert subscript inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "~subscript~",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert superscript inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "^superscript^",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should NOT convert wiki-links inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "[links|http://google.com]",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should convert raw link text inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "http://example.com",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should not convert color macro inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "{color:#59afe1}colour{color}",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1470] should not convert raw text around links inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "abc http://google.com abc",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text [CS-1553] should NOT convert bullet lists inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "* abc",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Preformatted text should NOT convert media inside preformatted text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "!image.jpg!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
